--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -13,6 +15,7 @@
 {
     text-align: center;
     font-family: 'Share Tech Mono',' monospace';
+    opacity: 75%;
     background-color:#ffffff;
     margin : auto;
     max-width : 30vw;
@@ -25,4 +28,9 @@
   font-size: small;
   text-align: center;
   color: rgb(17, 17, 17);
+}
+.carfont{
+  font-family:'Press Start 2P', 'cursive';
+  color: black;
+  font-size: 15px;
 }
