--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,16 @@
 }
 .LoginBox
 {
+    margin-bottom: 25%;
     text-align: center;
     font-family: 'Share Tech Mono',' monospace';
     opacity: 75%;
     background-color:#ffffff;
     margin : auto;
     max-width : 30vw;
-    height: 80vh;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    border-radius: 0.3vh;
+    height: 75vh;
+    box-shadow: 0 8px 16px 0 rgba(250, 248, 248, 0.2);
+    border-radius: 0.8vh;
 }
 .LoginBox p{
   font-style: 'swap';
