--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
+.App{
+  text-align:center;
+  background-color: #282c34;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -19,8 +27,8 @@
     opacity: 75%;
     background-color:#ffffff;
     margin : auto;
-    max-width : 30vw;
-    height: 75vh;
+    max-width : 50vw;
+    height: 100%;
     box-shadow: 0 8px 16px 0 rgba(250, 248, 248, 0.2);
     border-radius: 0.8vh;
 }
@@ -32,7 +40,45 @@
 }
 .carfont{
   font-family:'Press Start 2P', 'cursive';
-  color: black;
+  color: rgb(250, 249, 249);
   font-size: 15px;
 }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align:center;
+  background-color: #030303;
+  border-radius: 8%;
+
+}
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.card p{
+  font-family:'Share Tech Mono',' monospace' ;
+  font-size: small;
+  color: #ffffff;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
 
